kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-blue-green
  template:
    metadata:
      labels:
        app: nginx-blue-green
    spec:
      containers:
      - name: nginx-blue-green
        image: reanconnect/nginx-blue-green
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-green-service
#  annotations:
#    link.argocd.argoproj.io/external-link: http://65.2.38.107
  labels:
    app: nginx-blue-green
spec:
  type: NodePort
  selector:
    app: nginx-blue-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
