kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  annotations:
#    kubernetes.io/ingress.class: ingress-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 70off.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-green-service
                port:
                  number: 80
